BUG:53052

svn path=/branches/KDE/3.5/kdelibs/; revision=670335